@@ -12,6 +12,7 @@ my $post_diag;
 $modules{$_} = $_ for qw(
   Class::Tiny
   Cpanel::JSON::XS
+  Data::Section::Writer
   ExtUtils::MakeMaker
   JSON::MaybeXS
   JSON::PP
